manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "automationteste-af69"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "automationteste-af69"
  template:
    metadata:
      labels:
        app: "automationteste-af69"
    spec:
      containers:
        - name: "automationteste-af69"
          image: "kubertech.azurecr.io/automationteste"
          ports:
          - containerPort: 80
