manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "automationteste-0c08"
    labels:
        app: "automationteste-0c08"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: automation-teste8a65-automationteste-0c08.2b2df8ed38f84dcca83e.brazilsouth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "automationteste-0c08"
                servicePort: 80
